fix button on safari: touchstart test 5

--- a/style.css
+++ b/style.css
@@ -296,6 +296,8 @@ h2 {
     background-color: aqua;
     position: sticky;
     margin: 10px;
+    padding: 10px;
+    cursor: pointer;
 
 }
 
